test_case function implemented

--- a/main.ipynb
+++ b/main.ipynb
@@ -9,22 +9,450 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
-    "import pandas as pd"
+    "import glob\n",
+    "import pandas as pd\n",
+    "from typing import List, Dict"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "path_logs = r'/mnt/c/Users/mathe/Documents/AIML_logs/treinamento_aiml/logs'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
     "logs = pd.DataFrame(columns=['equipment_type', 'run_id', 'test_case', 'timestamp', 'baud_rate', 'slot', 'serial_port', 'tx_data', 'rx_data', 'response_time'\n",
     "                            'command_protocol', 'command_name'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_equipment_type(path: str) -> List[str]:\n",
+    "    '''\n",
+    "    Returns a list with equipment's types.\n",
+    "    Args:\n",
+    "        path (str): Logs path\n",
+    "    Returns:\n",
+    "        List (str): List with equipment's types\n",
+    "    '''\n",
+    "    equipment_types = []\n",
+    "    entries = os.listdir(path)\n",
+    "    for entry in entries:\n",
+    "        equipment_types.append(entry)\n",
+    "    return equipment_types"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_run_ids(path: str) -> Dict[str, List[str]]:\n",
+    "    '''\n",
+    "    Returns a dict with equipment's types as keys and a list of run_ids as values.\n",
+    "    Args:\n",
+    "        path (str): Logs path\n",
+    "    Returns:\n",
+    "        Dict (str, List[str]): Dict with equipment's types as keys and a list of run_ids as values\n",
+    "    '''\n",
+    "    run_ids = {}\n",
+    "    for equipment in logs['equipment_type'].values:\n",
+    "        entries = os.listdir(f'{path_logs}/{equipment}')\n",
+    "        if equipment not in run_ids.keys():\n",
+    "            run_ids[equipment] = []\n",
+    "        for entry in entries:\n",
+    "            run_ids[equipment].append(entry)\n",
+    "    return run_ids"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_test_case(path: str) -> Dict[str, List[str]]:\n",
+    "    '''\n",
+    "    Returns a dict with run_ids as keys and a list of test_cases names as values.\n",
+    "    Args:\n",
+    "        path (str): Logs path\n",
+    "    Returns:\n",
+    "        Dict (str, List[str]): Dict with run_ids as keys and a list of test_cases names as values\n",
+    "    '''\n",
+    "    test_cases = {}\n",
+    "    for equipment in logs['equipment_type'].values:\n",
+    "        for run_id in logs['run_id'].values:\n",
+    "            files = next(os.walk(f'{path_logs}/{equipment}/{run_id}'))[2]\n",
+    "            test_cases[run_id] = [file[10:-4] for file in files if file.endswith('.txt', -4)]\n",
+    "    return test_cases"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "logs['equipment_type'] = get_equipment_type(path_logs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "logs['run_id'] = logs['equipment_type'].map(get_run_ids(path_logs))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>equipment_type</th>\n",
+       "      <th>run_id</th>\n",
+       "      <th>test_case</th>\n",
+       "      <th>timestamp</th>\n",
+       "      <th>baud_rate</th>\n",
+       "      <th>slot</th>\n",
+       "      <th>serial_port</th>\n",
+       "      <th>tx_data</th>\n",
+       "      <th>rx_data</th>\n",
+       "      <th>response_timecommand_protocol</th>\n",
+       "      <th>command_name</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>8721</td>\n",
+       "      <td>220818_171756_851_8721_win</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>8721</td>\n",
+       "      <td>220905_220107_851_8721_linux</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  equipment_type                        run_id test_case timestamp baud_rate  \\\n",
+       "0           8721    220818_171756_851_8721_win       NaN       NaN       NaN   \n",
+       "0           8721  220905_220107_851_8721_linux       NaN       NaN       NaN   \n",
+       "\n",
+       "  slot serial_port tx_data rx_data response_timecommand_protocol command_name  \n",
+       "0  NaN         NaN     NaN     NaN                           NaN          NaN  \n",
+       "0  NaN         NaN     NaN     NaN                           NaN          NaN  "
+      ]
+     },
+     "execution_count": 69,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "logs = logs.explode('run_id')\n",
+    "logs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>equipment_type</th>\n",
+       "      <th>run_id</th>\n",
+       "      <th>test_case</th>\n",
+       "      <th>timestamp</th>\n",
+       "      <th>baud_rate</th>\n",
+       "      <th>slot</th>\n",
+       "      <th>serial_port</th>\n",
+       "      <th>tx_data</th>\n",
+       "      <th>rx_data</th>\n",
+       "      <th>response_timecommand_protocol</th>\n",
+       "      <th>command_name</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>8721</td>\n",
+       "      <td>220818_171756_851_8721_win</td>\n",
+       "      <td></td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>8721</td>\n",
+       "      <td>220818_171756_851_8721_win</td>\n",
+       "      <td>10000</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>8721</td>\n",
+       "      <td>220818_171756_851_8721_win</td>\n",
+       "      <td>10001</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>8721</td>\n",
+       "      <td>220818_171756_851_8721_win</td>\n",
+       "      <td>10002</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>8721</td>\n",
+       "      <td>220818_171756_851_8721_win</td>\n",
+       "      <td>10005</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>8721</td>\n",
+       "      <td>220905_220107_851_8721_linux</td>\n",
+       "      <td>9995</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>8721</td>\n",
+       "      <td>220905_220107_851_8721_linux</td>\n",
+       "      <td>9996</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>8721</td>\n",
+       "      <td>220905_220107_851_8721_linux</td>\n",
+       "      <td>9997</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>8721</td>\n",
+       "      <td>220905_220107_851_8721_linux</td>\n",
+       "      <td>9998</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>8721</td>\n",
+       "      <td>220905_220107_851_8721_linux</td>\n",
+       "      <td>9999</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1704 rows × 11 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   equipment_type                        run_id test_case timestamp baud_rate  \\\n",
+       "0            8721    220818_171756_851_8721_win                 NaN       NaN   \n",
+       "0            8721    220818_171756_851_8721_win     10000       NaN       NaN   \n",
+       "0            8721    220818_171756_851_8721_win     10001       NaN       NaN   \n",
+       "0            8721    220818_171756_851_8721_win     10002       NaN       NaN   \n",
+       "0            8721    220818_171756_851_8721_win     10005       NaN       NaN   \n",
+       "..            ...                           ...       ...       ...       ...   \n",
+       "0            8721  220905_220107_851_8721_linux      9995       NaN       NaN   \n",
+       "0            8721  220905_220107_851_8721_linux      9996       NaN       NaN   \n",
+       "0            8721  220905_220107_851_8721_linux      9997       NaN       NaN   \n",
+       "0            8721  220905_220107_851_8721_linux      9998       NaN       NaN   \n",
+       "0            8721  220905_220107_851_8721_linux      9999       NaN       NaN   \n",
+       "\n",
+       "   slot serial_port tx_data rx_data response_timecommand_protocol command_name  \n",
+       "0   NaN         NaN     NaN     NaN                           NaN          NaN  \n",
+       "0   NaN         NaN     NaN     NaN                           NaN          NaN  \n",
+       "0   NaN         NaN     NaN     NaN                           NaN          NaN  \n",
+       "0   NaN         NaN     NaN     NaN                           NaN          NaN  \n",
+       "0   NaN         NaN     NaN     NaN                           NaN          NaN  \n",
+       "..  ...         ...     ...     ...                           ...          ...  \n",
+       "0   NaN         NaN     NaN     NaN                           NaN          NaN  \n",
+       "0   NaN         NaN     NaN     NaN                           NaN          NaN  \n",
+       "0   NaN         NaN     NaN     NaN                           NaN          NaN  \n",
+       "0   NaN         NaN     NaN     NaN                           NaN          NaN  \n",
+       "0   NaN         NaN     NaN     NaN                           NaN          NaN  \n",
+       "\n",
+       "[1704 rows x 11 columns]"
+      ]
+     },
+     "execution_count": 70,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "logs['test_case'] = logs['run_id'].map(get_test_case(path_logs))\n",
+    "logs = logs.explode('test_case')\n",
+    "logs"
    ]
   }
  ],
