--- a/main.ipynb
+++ b/main.ipynb
@@ -75,13 +75,15 @@
    "outputs": [],
    "source": [
     "def get_equipment_type(path: str) -> List[str]:\n",
-    "    '''\n",
-    "    Returns a list with equipment's types.\n",
+    "    \"\"\"Returns a list with equipment's types.\n",
+    "    \n",
     "    Args:\n",
     "        path (str): Logs path.\n",
+    "        \n",
     "    Returns:\n",
     "        List (str): List with equipment's types.\n",
-    "    '''\n",
+    "    \"\"\"\n",
+    "\n",
     "    \n",
     "    equipment_types = []\n",
     "    entries = os.listdir(path)\n",
@@ -97,13 +99,14 @@
    "outputs": [],
    "source": [
     "def get_run_ids(path: str) -> Dict[str, List[str]]:\n",
-    "    '''\n",
-    "    Returns a dict with equipment's types as keys and a list of run_ids as values.\n",
+    "    \"\"\"Returns a dict with equipment's types as keys and a list of run_ids as values.\n",
+    "\n",
     "    Args:\n",
     "        path (str): Logs path.\n",
+    "        \n",
     "    Returns:\n",
     "        Dict (str, List[str]): Dict with equipment's types as keys and a list of run_ids as values.\n",
-    "    '''\n",
+    "    \"\"\"\n",
     "    \n",
     "    run_ids = defaultdict(list)\n",
     "    for equipment in logs['equipment_type'].unique():\n",
@@ -120,13 +123,14 @@
    "outputs": [],
    "source": [
     "def get_test_case(path: str) -> Dict[str, List[str]]:\n",
-    "    '''\n",
-    "    Returns a dict with run_ids as keys and a list of test_cases names as values.\n",
+    "    \"\"\"Returns a dict with run_ids as keys and a list of test_cases names as values.\n",
+    "\n",
     "    Args:\n",
     "        path (str): Logs path.\n",
+    "        \n",
     "    Returns:\n",
     "        Dict (str, List[str]): Dict with run_ids as keys and a list of test_cases names as values.\n",
-    "    '''\n",
+    "    \"\"\"\n",
     "    \n",
     "    test_cases = {}\n",
     "    for equipment in logs['equipment_type'].unique():\n",
@@ -143,16 +147,18 @@
    "outputs": [],
    "source": [
     "def open_file(path: str, eq_type: str, run_id: str, test_case: str) -> TextIO:\n",
-    "    '''\n",
-    "    Open a test_case_*.txt file by receiving the path of the equipments, equipment type, run_id and the number of the test case as arguments. Returns the file.\n",
+    "    \"\"\"Open a test_case_*.txt file by receiving the path of the equipments, equipment type, run_id \n",
+    "        and the number of the test case as arguments. Returns the file.\n",
+    "\n",
     "    Args:\n",
     "        path (str): path where each equipment is located.\n",
     "        eq_type (str): equipment_type.\n",
     "        run_id (str): run_id.\n",
     "        test_case (str): number of the test_case file.\n",
+    "        \n",
     "    Returns:\n",
     "        file (TextIO): the opened test_case file.\n",
-    "    '''\n",
+    "    \"\"\"\n",
     "    \n",
     "    file = open(f'{path}/{eq_type}/{run_id}/test_case_{test_case}.txt', 'r', encoding='cp860')\n",
     "    return file"
@@ -165,15 +171,15 @@
    "outputs": [],
    "source": [
     "def print_lines(path: str, eq_type: str, run_id: str, test_case: str) -> None:\n",
-    "    '''\n",
-    "    Uses the open_file() to open a test_case_*.txt and print its contents.\n",
+    "    \"\"\"Uses the open_file() to open a test_case_*.txt and print its contents.\n",
+    "\n",
     "    Args:\n",
     "        path (str): path where each equipment is located.\n",
     "        eq_type (str): equipment_type.\n",
     "        run_id (str): run_id.\n",
     "        test_case (str): number of the test_case file.\n",
-    "    '''\n",
-    "\n",
+    "    \"\"\"\n",
+    "    \n",
     "    file = open_file(path, eq_type, run_id, test_case)\n",
     "    [print(line) for line in file.readlines()]\n",
     "    file.close()"
@@ -186,13 +192,14 @@
    "outputs": [],
    "source": [
     "def get_timestamp(path: str) -> DefaultDict[str, List[str]]:\n",
-    "    '''\n",
-    "    Get the timestamp of every line in the test case text file that has a \"TX\" signal.\n",
+    "    \"\"\"Get the timestamp of every line in the test case text file that has a \"TX\" signal.\n",
+    "\n",
     "    Args:\n",
     "        path (str): path where each equipment is located.\n",
+    "        \n",
     "    Returns:\n",
     "        timestamp (DefaultDict[str, List[str]]): a dictionary where the keys are the test cases and the values are a list of timestamps.\n",
-    "    '''\n",
+    "    \"\"\"\n",
     "\n",
     "    timestamp = defaultdict(list)\n",
     "    for equipment in logs['equipment_type'].unique():\n",
