--- a/main.ipynb
+++ b/main.ipynb
@@ -77,10 +77,10 @@
     "def get_equipment_type(path: str) -> List[str]:\n",
     "    \"\"\"Returns a list with equipment's types.\n",
     "    \n",
-    "    Args:\n",
+    "    ## Args:\n",
     "        path (str): Logs path.\n",
     "        \n",
-    "    Returns:\n",
+    "    ## Returns:\n",
     "        List (str): List with equipment's types.\n",
     "    \"\"\"\n",
     "\n",
@@ -101,10 +101,10 @@
     "def get_run_ids(path: str) -> Dict[str, List[str]]:\n",
     "    \"\"\"Returns a dict with equipment's types as keys and a list of run_ids as values.\n",
     "\n",
-    "    Args:\n",
+    "    ## Args:\n",
     "        path (str): Logs path.\n",
     "        \n",
-    "    Returns:\n",
+    "    ## Returns:\n",
     "        Dict (str, List[str]): Dict with equipment's types as keys and a list of run_ids as values.\n",
     "    \"\"\"\n",
     "    \n",
@@ -125,10 +125,10 @@
     "def get_test_case(path: str) -> Dict[str, List[str]]:\n",
     "    \"\"\"Returns a dict with run_ids as keys and a list of test_cases names as values.\n",
     "\n",
-    "    Args:\n",
+    "    ## Args:\n",
     "        path (str): Logs path.\n",
     "        \n",
-    "    Returns:\n",
+    "    ## Returns:\n",
     "        Dict (str, List[str]): Dict with run_ids as keys and a list of test_cases names as values.\n",
     "    \"\"\"\n",
     "    \n",
@@ -150,13 +150,13 @@
     "    \"\"\"Open a test_case_*.txt file by receiving the path of the equipments, equipment type, run_id \n",
     "        and the number of the test case as arguments. Returns the file.\n",
     "\n",
-    "    Args:\n",
+    "    ## Args:\n",
     "        path (str): path where each equipment is located.\n",
     "        eq_type (str): equipment_type.\n",
     "        run_id (str): run_id.\n",
     "        test_case (str): number of the test_case file.\n",
     "        \n",
-    "    Returns:\n",
+    "    ## Returns:\n",
     "        file (TextIO): the opened test_case file.\n",
     "    \"\"\"\n",
     "    \n",
@@ -173,7 +173,7 @@
     "def print_lines(path: str, eq_type: str, run_id: str, test_case: str) -> None:\n",
     "    \"\"\"Uses the open_file() to open a test_case_*.txt and print its contents.\n",
     "\n",
-    "    Args:\n",
+    "    ## Args:\n",
     "        path (str): path where each equipment is located.\n",
     "        eq_type (str): equipment_type.\n",
     "        run_id (str): run_id.\n",
@@ -194,10 +194,10 @@
     "def get_timestamp(path: str) -> DefaultDict[str, List[str]]:\n",
     "    \"\"\"Get the timestamp of every line in the test case text file that has a \"TX\" signal.\n",
     "\n",
-    "    Args:\n",
+    "    ## Args:\n",
     "        path (str): path where each equipment is located.\n",
     "        \n",
-    "    Returns:\n",
+    "    ## Returns:\n",
     "        timestamp (DefaultDict[str, List[str]]): a dictionary where the keys are the test cases and the values are a list of timestamps.\n",
     "    \"\"\"\n",
     "\n",
