--- a/main.ipynb
+++ b/main.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,11 +30,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
-    "path_logs = r'/mnt/c/Users/mathe/Documents/AIML_logs/treinamento_aiml/logs'"
+    "path_logs = r'/mnt/c/Users/Matheus Solon/Documents/AIML_logs/treinamento_aiml/logs'"
    ]
   },
   {
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -211,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -233,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -255,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -279,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -303,59 +303,78 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# def get_rx_data(df_linha):\n",
-    "#     print(df_linha)\n",
-    "#     tx_data_buffer = defaultdict(str)\n",
-    "#     file = open_file(path_logs, df_linha['equipment_type'], df_linha['run_id'], df_linha['test_case'])\n",
-    "#     while True:\n",
-    "#         log_line = file.readline()\n",
-    "#         if 'OPTICALRX:' in log_line:\n",
-    "#             slot_tx = df_linha['slot']\n",
-    "#             slot_rx = log_line[35:38].strip()\n",
-    "#             if slot_tx == slot_rx:\n",
-    "#                 return log_line[51:].rstrip('\\n')\n",
-    "#             elif slot_rx in tx_data_buffer.keys():\n",
-    "#                 logs.loc[:, ('tx_data' == tx_data_buffer[slot_rx])] = log_line[51:].rstrip('\\n')\n",
-    "#             else:\n",
-    "#                 tx_data_buffer[slot_tx] = df_linha['rx_data']\n",
-    "#                 continue\n",
-    "#         elif 'RX:' in log_line:\n",
-    "#             slot_tx = df_linha['slot']\n",
-    "#             slot_rx = log_line[35:38].strip()\n",
-    "#             if slot_tx == slot_rx:\n",
-    "#                 return log_line[51:].rstrip('\\n')\n",
-    "#             elif slot_rx in tx_data_buffer.keys():\n",
-    "#                 logs.loc[:, ('tx_data' == tx_data_buffer[slot_rx])] = log_line[51:].rstrip('\\n')\n",
-    "#                 tx_data_buffer.pop(slot_rx, f'{slot_rx} key not found')\n",
-    "#                 continue\n",
-    "#             else:\n",
-    "#                 tx_data_buffer[slot_tx] = df_linha['rx_data']\n",
-    "#                 continue\n",
-    "#         if not line:\n",
-    "#             break"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def get_rx_data(path: str):\n",
-    "    rx_data = defaultdict(list)\n",
+    "def get_rx_data(row, path: str):\n",
     "    for equipment in logs['equipment_type'].unique():\n",
     "        for run_id in logs['run_id'].unique():\n",
     "            for test_case in logs['test_case'].unique():\n",
     "                file = open_file(path, equipment, run_id, test_case)\n",
     "                while True:\n",
     "                    log_line = file.readline()\n",
-    "                    if 'TX:' in log_line:\n",
-    "                        rx_line = file.readline()\n",
-    "                        if "
+    "                    if ('OPTICALTX:' in log_line or 'TX:' in log_line):\n",
+    "                        if log_line[51:].rstrip('\\n') == row:\n",
+    "                            rx_line = file.readline()\n",
+    "                            print('done')\n",
+    "                            return rx_line[51:].rstrip('\\n')\n",
+    "                        else:\n",
+    "                            print(f'else')\n",
+    "                            continue\n",
+    "                    if not log_line:\n",
+    "                        break"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "primeiro if\n",
+      "primeiro if\n",
+      "primeiro if\n",
+      "primeiro if\n",
+      "primeiro if\n",
+      "primeiro if\n",
+      "primeiro if\n",
+      "primeiro if\n",
+      "primeiro if\n",
+      "primeiro if\n",
+      "primeiro if\n",
+      "primeiro if\n",
+      "primeiro if\n",
+      "primeiro if\n",
+      "primeiro if\n",
+      "primeiro if\n",
+      "primeiro if\n",
+      "primeiro if\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn [46], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m logs[\u001b[39m'\u001b[39m\u001b[39mrx_data\u001b[39m\u001b[39m'\u001b[39m] \u001b[39m=\u001b[39m logs[\u001b[39m'\u001b[39;49m\u001b[39mtx_data\u001b[39;49m\u001b[39m'\u001b[39;49m]\u001b[39m.\u001b[39;49mapply(get_rx_data, path\u001b[39m=\u001b[39;49mpath_logs)\n",
+      "File \u001b[0;32m~/.cache/pypoetry/virtualenvs/logs-ativ-Vd36BXJX-py3.8/lib/python3.8/site-packages/pandas/core/series.py:4771\u001b[0m, in \u001b[0;36mSeries.apply\u001b[0;34m(self, func, convert_dtype, args, **kwargs)\u001b[0m\n\u001b[1;32m   4661\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mapply\u001b[39m(\n\u001b[1;32m   4662\u001b[0m     \u001b[39mself\u001b[39m,\n\u001b[1;32m   4663\u001b[0m     func: AggFuncType,\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m   4666\u001b[0m     \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mkwargs,\n\u001b[1;32m   4667\u001b[0m ) \u001b[39m-\u001b[39m\u001b[39m>\u001b[39m DataFrame \u001b[39m|\u001b[39m Series:\n\u001b[1;32m   4668\u001b[0m     \u001b[39m\"\"\"\u001b[39;00m\n\u001b[1;32m   4669\u001b[0m \u001b[39m    Invoke function on values of Series.\u001b[39;00m\n\u001b[1;32m   4670\u001b[0m \n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m   4769\u001b[0m \u001b[39m    dtype: float64\u001b[39;00m\n\u001b[1;32m   4770\u001b[0m \u001b[39m    \"\"\"\u001b[39;00m\n\u001b[0;32m-> 4771\u001b[0m     \u001b[39mreturn\u001b[39;00m SeriesApply(\u001b[39mself\u001b[39;49m, func, convert_dtype, args, kwargs)\u001b[39m.\u001b[39;49mapply()\n",
+      "File \u001b[0;32m~/.cache/pypoetry/virtualenvs/logs-ativ-Vd36BXJX-py3.8/lib/python3.8/site-packages/pandas/core/apply.py:1105\u001b[0m, in \u001b[0;36mSeriesApply.apply\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m   1102\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mapply_str()\n\u001b[1;32m   1104\u001b[0m \u001b[39m# self.f is Callable\u001b[39;00m\n\u001b[0;32m-> 1105\u001b[0m \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mapply_standard()\n",
+      "File \u001b[0;32m~/.cache/pypoetry/virtualenvs/logs-ativ-Vd36BXJX-py3.8/lib/python3.8/site-packages/pandas/core/apply.py:1156\u001b[0m, in \u001b[0;36mSeriesApply.apply_standard\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m   1154\u001b[0m     \u001b[39melse\u001b[39;00m:\n\u001b[1;32m   1155\u001b[0m         values \u001b[39m=\u001b[39m obj\u001b[39m.\u001b[39mastype(\u001b[39mobject\u001b[39m)\u001b[39m.\u001b[39m_values\n\u001b[0;32m-> 1156\u001b[0m         mapped \u001b[39m=\u001b[39m lib\u001b[39m.\u001b[39;49mmap_infer(\n\u001b[1;32m   1157\u001b[0m             values,\n\u001b[1;32m   1158\u001b[0m             f,\n\u001b[1;32m   1159\u001b[0m             convert\u001b[39m=\u001b[39;49m\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mconvert_dtype,\n\u001b[1;32m   1160\u001b[0m         )\n\u001b[1;32m   1162\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mlen\u001b[39m(mapped) \u001b[39mand\u001b[39;00m \u001b[39misinstance\u001b[39m(mapped[\u001b[39m0\u001b[39m], ABCSeries):\n\u001b[1;32m   1163\u001b[0m     \u001b[39m# GH#43986 Need to do list(mapped) in order to get treated as nested\u001b[39;00m\n\u001b[1;32m   1164\u001b[0m     \u001b[39m#  See also GH#25959 regarding EA support\u001b[39;00m\n\u001b[1;32m   1165\u001b[0m     \u001b[39mreturn\u001b[39;00m obj\u001b[39m.\u001b[39m_constructor_expanddim(\u001b[39mlist\u001b[39m(mapped), index\u001b[39m=\u001b[39mobj\u001b[39m.\u001b[39mindex)\n",
+      "File \u001b[0;32m~/.cache/pypoetry/virtualenvs/logs-ativ-Vd36BXJX-py3.8/lib/python3.8/site-packages/pandas/_libs/lib.pyx:2918\u001b[0m, in \u001b[0;36mpandas._libs.lib.map_infer\u001b[0;34m()\u001b[0m\n",
+      "File \u001b[0;32m~/.cache/pypoetry/virtualenvs/logs-ativ-Vd36BXJX-py3.8/lib/python3.8/site-packages/pandas/core/apply.py:139\u001b[0m, in \u001b[0;36mApply.__init__.<locals>.f\u001b[0;34m(x)\u001b[0m\n\u001b[1;32m    138\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mf\u001b[39m(x):\n\u001b[0;32m--> 139\u001b[0m     \u001b[39mreturn\u001b[39;00m func(x, \u001b[39m*\u001b[39;49margs, \u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49mkwargs)\n",
+      "Cell \u001b[0;32mIn [45], line 19\u001b[0m, in \u001b[0;36mget_rx_data\u001b[0;34m(row, path)\u001b[0m\n\u001b[1;32m     17\u001b[0m         \u001b[39melse\u001b[39;00m:\n\u001b[1;32m     18\u001b[0m             \u001b[39mcontinue\u001b[39;00m\n\u001b[0;32m---> 19\u001b[0m \u001b[39melif\u001b[39;00m log_line[\u001b[39m51\u001b[39;49m:]\u001b[39m.\u001b[39;49mrstrip(\u001b[39m'\u001b[39;49m\u001b[39m\\n\u001b[39;49;00m\u001b[39m'\u001b[39;49m) \u001b[39min\u001b[39;49;00m tx_data_buffer:\n\u001b[1;32m     20\u001b[0m     tx_slot \u001b[39m=\u001b[39m log_line[\u001b[39m35\u001b[39m:\u001b[39m38\u001b[39m]\u001b[39m.\u001b[39mstrip()\n\u001b[1;32m     21\u001b[0m     \u001b[39mwhile\u001b[39;00m \u001b[39mTrue\u001b[39;00m:\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+     ]
+    }
+   ],
+   "source": [
+    "logs['tx_data'].apply(get_rx_data, path=path_logs)"
    ]
   },
   {
@@ -367,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -376,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -386,7 +405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -638,7 +657,7 @@
        "[1702 rows x 12 columns]"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -651,7 +670,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -903,7 +922,7 @@
        "[1702 rows x 12 columns]"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -915,7 +934,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -1180,7 +1199,7 @@
        "[1702 rows x 12 columns]"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1192,7 +1211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -1470,7 +1489,7 @@
        "[1702 rows x 12 columns]"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1482,7 +1501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -1773,7 +1792,7 @@
        "[1702 rows x 12 columns]"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1785,7 +1804,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -2089,7 +2108,7 @@
        "[1702 rows x 12 columns]"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2101,7 +2120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -2366,7 +2385,7 @@
        "[324054 rows x 12 columns]"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
